--- a/guigasblog/_config.yml
+++ b/guigasblog/_config.yml
@@ -30,6 +30,17 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Default front matter
+defaults:
+  -  
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      title: "My title"
+
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
